added new version of tmsf with logger

--- a/docker-compose-mongo.yml
+++ b/docker-compose-mongo.yml
@@ -7,9 +7,9 @@ services:
         volumes:
             - /data/databases/mongo:/data/db
         networks:
-            - devdependencies
+            - mongodev
 
 
 networks:
-    devdependencies:
+    mongodev:
         driver: bridge
